<resources>
    <string name="app_name">CourseProject[Planet Builder]</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="finished_planets">Finished Planets:</string>
    <string name="total_clicks">Total clicks:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_account">New Account</string>
    <string name="planet_builder_header">Planet Builder</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_account">Create Account</string>
    <string name="planet_name">Planet Name</string>
    <string name="size">Size</string>
    <string name="create_planet">Create Planet</string>
    <string name="nav_game">Game</string>
    <string name="nav_current_planet">Current Planet</string>
    <string name="nav_all_planets">All Planets</string>
    <string name="nav_new_planet">New Planet</string>
    <string name="nav_corona_virus">Corona Virus</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_user">User</string>
    <string name="empty_password">Empty Password</string>
    <string name="empty_confirmation_password">Empty Confirmation Password</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="empty_username">Username is empty</string>
    <string name="empty_email">Email is empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="finished_button">FINISHED</string>
</resources>
